Adapt the example to show OL-Cesium with Webpack usage

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 		<meta charset="utf-8">
 	  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<title>Cesium + Webpack</title>
+		<title>Cesium + OL-Cesium + Webpack</title>
 	</head>
 	<body>
-		<div id="cesiumContainer"></div>
+    <input type="button" onclick="ol3d.setEnabled(!ol3d.getEnabled())" value="Toggle OL-Cesium"></input>
+		<div id="map"></div>
 	</body>
 </html>
